Changed the logo, app's name and description

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="An app which guides user through checkout process and collects data"
+      content="An app that guides users through the checkout process, collects data, and displays queried GitHub account information"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>CompanyName Checkout App</title>
+    <title>Github Lookup App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
